fixed some sizing issues on smaller screens, fixed outline rules, added user page

--- a/src/components/UserAuth/userAuth.css
+++ b/src/components/UserAuth/userAuth.css
@@ -97,7 +97,7 @@
   background: var(--input);
   border: none;
   padding-left: 1em;
-  outline: 1px solid var(--border-color);
+  border: 1px solid var(--border-color);
 }
 
 .auth-field-section textarea {
@@ -137,7 +137,7 @@
 }
 
 .file-selector {
-  outline: 1px dashed var(--blue-accent) !important;
+  border: 1px dashed var(--blue-accent) !important;
   display: flex;
   cursor: pointer;
   color: rgba(0, 0, 0, 0);
@@ -157,4 +157,10 @@
 
 .signup-wrapper {
   padding-bottom: 1em;
+}
+
+@media screen and (max-width: 1600px) {
+  .auth-wrapper {
+    width: 80%;
+  }
 }
