--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -52,7 +52,7 @@
   justify-content: center;
   position: relative;
   img {
-    max-width: 600px;
+    max-width: 75%;
     border-radius: 10px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     transform: rotate(-2deg);
@@ -123,7 +123,6 @@
     padding: 0.8em;
     transition: all ease 0.5s;
     .image-wrapper {
-      width: 300px;
       height: 300px;
       overflow: hidden;
       border-radius: 10px;
@@ -208,5 +207,17 @@
   }
   .artists-wrapper {
     grid-template-columns: repeat(4, 1fr); 
+  }
+
+}
+
+@media (max-width: 1600px) {
+  .call-to-action {
+    p {
+      margin-top: 0;
+      max-width: 100%;
+      font-size: 30pt;
+      font-family: 'Poppins Black', sans-serif;
+    }
   }
 }
