--- a/src/pages/Mint/mint.css
+++ b/src/pages/Mint/mint.css
@@ -26,10 +26,10 @@
   height: 45px;
   border-radius: 10px;
   background: var(--input);
-  outline: 1px solid var(--border-color);
-  border: none;
+  border: 1px solid var(--border-color);
   padding-left: 1em;
   width: 100%;
+  max-width: 100%;
 }
 
 .mint-wrapper textarea {
@@ -55,7 +55,7 @@
   max-width: 100%;
   height: 47px;
   background: var(--input);
-  outline: 1px solid var(--border-color);
+  border: 1px solid var(--border-color);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -76,10 +76,17 @@
 .creator-wrapper {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1em;
+  min-width: 100%;
 }
 
-.creator-wrapper input {
-  width: 49%;
+.creator-wrapper .creator-input {
+  flex: 2;
+  margin-right: 1em;
+}
+
+.creator-wrapper .revenue-input {
+  flex: 1;
 }
 
 .new-creator-button {
@@ -87,8 +94,8 @@
   height: 47px;
   color: var(--blue-accent);
   border-radius: 10px;
-  outline: 1px solid var(--blue-accent);
   border: none;
+  border: 1px solid var(--blue-accent);
   background: white;
   font-weight: bold;
   cursor: pointer;
@@ -105,4 +112,10 @@
 
 .new-creator-button:hover {
   filter: brightness(90%);
+}
+
+@media screen and (max-width: 1600px) {
+  .mint-wrapper {
+    width: 80%;
+  }
 }
